templates/network.yml
---
AWSTemplateFormatVersion: "2010-09-09"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "${self:custom.environment.${self:provider.stage}.VpcBlock}"
      EnableDnsSupport: true
      EnableDnsHostnames: false
      Tags:
        - Key: Name
          Value: "${self:service}-${self:provider.stage}-vpc"
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: "${self:service}-${self:provider.stage}-igw"
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref "AWS::Region"
      CidrBlock: !Select [10, !Cidr ["${self:custom.environment.${self:provider.stage}.VpcBlock}", 30, 8]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "${self:service}-${self:provider.stage}-public-subnet-az1"
  PublicSubnetB:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref "AWS::Region"
      CidrBlock: !Select [11, !Cidr ["${self:custom.environment.${self:provider.stage}.VpcBlock}", 30, 8]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "${self:service}-${self:provider.stage}-public-subnet-az2"
  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref "AWS::Region"
      CidrBlock: !Select [20, !Cidr ["${self:custom.environment.${self:provider.stage}.VpcBlock}", 30, 8]]
      Tags:
        - Key: Name
          Value: "${self:service}-${self:provider.stage}-private-subnet-az1"
  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref "AWS::Region"
      CidrBlock: !Select [21, !Cidr ["${self:custom.environment.${self:provider.stage}.VpcBlock}", 30, 8]]
      Tags:
        - Key: Name
          Value: "${self:service}-${self:provider.stage}-private-subnet-az2"
  NatGatewayAEIP:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc
  NatGatewayBEIP:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc
  NatGatewayA:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt NatGatewayAEIP.AllocationId
      SubnetId: !Ref PublicSubnetA
      Tags:
        - Key: Name
          Value: "${self:service}-${self:provider.stage}-natgw-az1"
  NatGatewayB:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt NatGatewayBEIP.AllocationId
      SubnetId: !Ref PublicSubnetB
      Tags:
        - Key: Name
          Value: "${self:service}-${self:provider.stage}-natgw-az2"
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "${self:service}-${self:provider.stage}-public-rt"
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnetRouteTableAssociationA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetRouteTableAssociationB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetB
      RouteTableId: !Ref PublicRouteTable
  PrivateRouteTableA:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "${self:service}-${self:provider.stage}-private-rt-az1"
  PrivateRouteA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayA
  PrivateSubnetRouteTableAssociationA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetA
      RouteTableId: !Ref PrivateRouteTableA
  PrivateRouteTableB:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "${self:service}-${self:provider.stage}-private-rt-az2"
  PrivateRouteB:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableB
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayB
  PrivateSubnetRouteTableAssociationB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetB
      RouteTableId: !Ref PrivateRouteTableB
  LambdaSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupName: "${self:service}-${self:provider.stage}-lambda-sg"
      GroupDescription: "-"
      Tags:
        - Key: "Name"
          Value: "${self:service}-${self:provider.stage}-lambda-sg"

Outputs:
  VPC:
    Value: !Ref VPC
    Export:
      Name: "${self:service}-${self:provider.stage}-vpc"
  PublicSubnetA:
    Value: !Ref PublicSubnetA
    Export:
      Name: "${self:service}-${self:provider.stage}-public-subnet-az1"
  PublicSubnetB:
    Value: !Ref PublicSubnetB
    Export:
      Name: "${self:service}-${self:provider.stage}-public-subnet-az2"
  PrivateSubnetA:
    Value: !Ref PrivateSubnetA
    Export:
      Name: "${self:service}-${self:provider.stage}-private-subnet-az1"
  PrivateSubnetB:
    Value: !Ref PrivateSubnetB
    Export:
      Name: "${self:service}-${self:provider.stage}-private-subnet-az2"
  AvailabilityZoneA:
    Value: !GetAtt PrivateSubnetA.AvailabilityZone
    Export:
      Name: "${self:service}-${self:provider.stage}-az1"
  AvailabilityZoneB:
    Value: !GetAtt PrivateSubnetB.AvailabilityZone
    Export:
      Name: "${self:service}-${self:provider.stage}-az2"
